--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,10 @@ dependencies = [
     "pydantic>=2.0.0",
     "asyncio",
     "uvicorn>=0.17.0",
-    "process-gpt-agent-sdk",
+    "starlette>=0.27.0",
+    "python-dotenv>=1.0.0",
+    "httpx>=0.24.0",
+    "process-gpt-agent-sdk==0.3.15",
 ]
 
 [project.optional-dependencies]
