--- a/Dockerfile.a2a_agent_executor
+++ b/Dockerfile.a2a_agent_executor
@@ -16,9 +16,13 @@ COPY requirements.txt ./
 RUN pip install --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt
 
-COPY src ./src
+# Copy only what this service needs
+COPY src/a2a_agent_executor ./src/a2a_agent_executor
+COPY src/a2a_form_processor ./src/a2a_form_processor
 
 EXPOSE 8000
 ENV PYTHONPATH="/app/src"
 
 CMD ["python", "src/a2a_agent_executor/server.py"]
+
+
